--- a/src/styles/weatherStyles.css
+++ b/src/styles/weatherStyles.css
@@ -8,9 +8,13 @@ body {
   color: white;
   font-size: 1.2rem;
 }
-label{
-  display: inline;
+.weather-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
+
 .container {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -20,8 +24,8 @@ label{
   padding: 20px;
   display: flex;
   flex-direction: column;
-  background-color: rgba(13, 27, 41, 0.607);
-  backdrop-filter: blur(7px);
+  background-color: rgba(13, 27, 41, 0.5);
+  backdrop-filter: blur(3px);
   border-radius: 10px;
 }
 
