feat: New parameters to WeatherCity and add SunCurveChart

--- a/src/styles/weatherStyles.css
+++ b/src/styles/weatherStyles.css
@@ -1,6 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
 
 body {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -8,57 +14,95 @@ body {
   color: white;
   font-size: 1.2rem;
 }
+
 .weather-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
 }
 
 .container {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  width: 380px;
-  min-height: 500px;
-  margin: 5px auto;
+  min-width
+  : 100%;
+  min-height: 100vh;
   padding: 20px;
   display: flex;
   flex-direction: column;
   background-color: rgba(13, 27, 41, 0.5);
   backdrop-filter: blur(3px);
-  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
 }
 
-h1 {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
 
+.city-img{
+  width: 200px;
+  padding: 0 0 20px;
+}
 .form {
   display: flex;
   margin-bottom: 20px;
   gap: 15px;
   flex-direction: column;
   align-items: center;
+  transition: .3s ease;
+}
+
+.temperature{
+  font-size: 3.5rem;
+  padding: 0;
+  margin: 0;
+}
+
+.img-temp{
+  display: flex;
+}
+
+.img-weather {
+  width: 75px;
+}
+
+.response{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.other-parameters{
+  display: flex;
+  width: 350px;
+  justify-content: space-around;
+}
+.other-parameters p:nth-child(2n){
+  margin: 0;
 }
 
 input {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
   border: none;
-  font-style: normal;
   color: #fffefe;
   flex: 1;
   padding: 10px;
-  border-radius: 4px;
-  background: rgba(68, 68, 70, 0.936);
+  border-bottom: 3px solid #fff;
+  width: 200px;
+  background: rgba(0, 0, 0, 0);
+}
 
+input:focus{
+  background: rgba(0, 0, 0, 0);
+  border: none;
+
+}
+
+::placeholder{
+  color: #fff;
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
 
 button {
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: rgb(62, 85, 110);
   color: #fff;
   font-weight: 500;
   border: none;
@@ -66,13 +110,16 @@ button {
   cursor: pointer;
   transition: all .3s;
   font-size: 1rem;
+  border: 1px transparent;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: rgb(62, 85, 110,.5);
+  border: 1px solid #fff;
 }
 
 h2 {
+  font-weight: 400;
   font-size: 20px;
   margin-bottom: 10px;
 }
@@ -81,11 +128,7 @@ p {
   margin-bottom: 5px;
 }
 
-img {
-  width: 100px;
-  height: 100px;
-  margin-top: 10px;
-}
+
 
 /* Estilos para móviles */
 @media (max-width: 440px) {
