style: Add responsive style

--- a/src/styles/weatherBackground.css
+++ b/src/styles/weatherBackground.css
@@ -1,21 +1,23 @@
 /* src/WeatherBackground.css */
 .weather-container {
-    position: relative;
-    z-index: 1;
-    transition: .3s ease;
-  }
-  
-  .background-video {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1;
-    transform: translate(-50%, -50%);
-    object-fit: cover;
-    transition: .5s ease;
-  }
-  
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  transition: .3s ease;
+  overflow-x: hidden;
+}
+
+.background-video {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+  transition: .5s ease;
+}
