--- a/src/styles/weatherStyles.css
+++ b/src/styles/weatherStyles.css
@@ -13,6 +13,8 @@ body {
   background-color: #0d1b29;
   color: white;
   font-size: 1.2rem;
+  width: 100%;
+  height: 100%;
 }
 
 .weather-container{
@@ -20,8 +22,7 @@ body {
 }
 
 .container {
-  min-width
-  : 100%;
+  min-width: 100%;
   min-height: 100vh;
   padding: 20px;
   display: flex;
@@ -30,6 +31,7 @@ body {
   backdrop-filter: blur(3px);
   align-items: center;
   justify-content: center;
+  overflow: auto;
 }
 
 
@@ -130,14 +132,3 @@ p {
 
 
 
-/* Estilos para móviles */
-@media (max-width: 440px) {
-  .container {
-    width: 98%;
-    height: 100vh;
-    backdrop-filter: blur(3px);
-    margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-  }
-}
